Fixed sizing to be a bit better on mobile devices.

--- a/src/audio/styles/main.styl
+++ b/src/audio/styles/main.styl
@@ -23,6 +23,7 @@
   padding 0
 
   background-color rgb(236,236,236)
+  font-size 1.1em
 
   position fixed
   bottom 0px
@@ -78,8 +79,7 @@
     padding-left 0px
 
   li
-    padding-left 1em
-    padding-bottom 0.15em
+    padding 0.25em 1em
 
     border-bottom 1px solid #EEE
 
@@ -108,3 +108,4 @@
 
   li
     display inline-block
+    margin-left 0.4em
